--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.5",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
@@ -47,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.3"
+    "@craco/craco": "^6.4.3",
+    "@types/react-router-dom": "5.3.0"
   }
 }
