--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.4.3",
-    "@types/react-router-dom": "5.3.0"
+    "@types/react-router-dom": "5.3.0",
+    "sass": "^1.45.1"
   }
 }
